2014-04-16 Pedro Vicente  <pvicente@uci.edu>

	* nco_prc_cmn_nsm_att() Process (define, write) variables belonging to ensembles in both files (ncbo);
	special "attribute lookup"  ensemble version

2014-04-16  Charlie Zender  <zender@uci.edu>

	* Restore former tolerance of -x EXCLUDE_INPUT_LIST for	non-existent elements
	Tolerance was lost in 4.2.x when nco_xtr_mk() replaced older method
	Thanks to Keith Oleson for this bug report

	* CDL mode prints orphaned dimensions with --rad flag

2014-04-15 Pedro Vicente  <pvicente@uci.edu>

	* ncks --rad, --orphan, --rph: Retain all (including orphaned) dimensions

	* nco_rad() Retain all dimensions.

2014-04-13  Charlie Zender  <zender@uci.edu>

	* Address Debian bug #744476 by utilizing dh_autoreconf in rules

	* Write nm2sng_nc() to netCDF-ize problematic HDF4 names
	Replaces slash and leading special characters by underscore

2014-04-12  Charlie Zender  <zender@uci.edu>

	* Fix nco_trm_trl_zro() bug which used last zero, if any, in
	exponent instead last zero after decimal point before exponent.
	This caused CDL and XML mode to truncate trailing zeros of exponent
	Hence all CDL and XML printing prior to 4.4.4 mis-prints floating
	point numbers with exponents +/- 10, 20, 30 ... 200, 210, 220...

	* Hunt for ncks --cdl formatting bug that truncates e-10 exponents...

2014-04-07 Pedro Vicente  <pvicente@uci.edu>

	* nco_nsm_att() Inquire if ensemble parent group has "ensemble_source" attribute (ncbo only)
	This attribute is saved in ncge

2014-04-06 Pedro Vicente  <pvicente@uci.edu>

	* Add /doc/README_msvc.txt, Microsoft Windows Visual Studio 2010 (MSVC) build instructions

2014-04-01  Charlie Zender  <zender@uci.edu>

	* NCO 4.4.3 release procedure:
 	Changes since nco-4_4_2: DAP srd fix, nsm brd, rgr wrk
	cd ~/nco;cvs tag -d nco-4_4_3;cvs tag -d nco-4_4_3-1
	cd ~/nco;cvs commit -m "Preparing nco-4.4.3 release"
	cvs tag -c nco-4_4_3;cvs tag -c nco-4_4_3-1

2014-04-01 Pedro Vicente  <pvicente@uci.edu>
